// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab> Snapshots and structure should render 1`] = `
<button
  aria-controls="tab-panel-1"
  aria-selected={false}
  className="lumx-tabs__link"
  id="tab-1"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={-1}
  type="button"
>
  <span>
    Test Tab Label
  </span>
</button>
`;

exports[`<Tab> Snapshots and structure should render active state 1`] = `
<button
  aria-controls="tab-panel-3"
  aria-selected={true}
  className="lumx-tabs__link lumx-tabs__link--is-active"
  id="tab-3"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={0}
  type="button"
>
  <span>
    Test Tab Label
  </span>
</button>
`;

exports[`<Tab> Snapshots and structure should render icon 1`] = `
<button
  aria-controls="tab-panel-2"
  aria-selected={false}
  className="lumx-tabs__link"
  id="tab-2"
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  role="tab"
  tabIndex={-1}
  type="button"
>
  <Icon
    icon="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
    size="xs"
  />
  <span>
    Test Tab Label
  </span>
</button>
`;
